Fix animation images

--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@
     </div>
     <div class="slideshow-container">
         <div class="buttons">
-            <span class="button"></span> 
-            <span class="button"></span> 
-            <span class="button"></span> 
+            <span class="button" onclick="currentSlide(0)"></span> 
+            <span class="button" onclick="currentSlide(1)"></span> 
+            <span class="button" onclick="currentSlide(2)"></span> 
         </div>
-        <div class="slide">
-            <img class="img" src="/images/image-1.jpg"">
+        <div class="slide" style="background-image: url('/images/image-1.jpg');">
             <div class="caption caption-position--left">
                 <h5>Welcome to health coach</h5>
                 <h2>Get in shape faster, live your happy life</h2>
@@ -117,8 +116,7 @@
                 </span>
             </div>
         </div>
-        <div class="slide">
-            <img class="img" src="/images/image-2.jpg"">
+        <div class="slide" style="background-image: url('/images/image-2.jpg');">
             <div class="caption caption-position--right">
                 <h5>A Fresh approach to healthy life</h5>
                 <h2>Unlock your potential with good nutrition</h2>
@@ -128,7 +126,7 @@
                     </span>
             </div>
         </div>
-        <div class="slide">
+        <div class="slide" style="background-image: url('/images/image-3.jpg');">
             <img class="img" src="/images/image-3.jpg"">
             <div class="caption caption-position--left">
                 <h5>Welcome to health coach</h5>
