--- a/index.html
+++ b/index.html
@@ -9,135 +9,201 @@
     <title></title>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="container h-100 p-0">
-            <div class="row h-100 d-flex align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <p class="contact">
-                        <span>Phone no:</span>
-                        <span>
-                            <a href="#">+00 123 456 789</a>
-                        </span>
-                    </p>
-                    <p class="contact">or</p>
-                    <p class="contact">
-                        <span>email us:</span>
-                        <span>
-                            <a href="#">emailsample@email.com</a>
-                        </span>
-                    </p>
-                </div>
+    <header>
+        <div class="wrapper">
+            <div class="container h-100 p-0">
+                <div class="row h-100 d-flex align-items-center">
+                    <div class="col d-flex justify-content-start">
+                        <p class="contact">
+                            <span>Phone no:</span>
+                            <span>
+                                <a href="#">+00 123 456 789</a>
+                            </span>
+                        </p>
+                        <p class="contact">or</p>
+                        <p class="contact">
+                            <span>email us:</span>
+                            <span>
+                                <a href="#">emailsample@email.com</a>
+                            </span>
+                        </p>
+                    </div>
 
-                <div class="col d-flex justify-content-end">
-                    <nav class="nav">
-                        <span>
+                    <div class="col d-flex justify-content-end">
+                        <nav class="nav">
+                            <span>
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </span>
+                            <span>
                             <a href="#">
-                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
                             </a>
-                        </span>
-                        <span>
-                        <a href="#">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        </span>
-                        <span>
-                        <a href="#">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        </span>
-                        <span>
+                            </span>
+                            <span>
                             <a href="#">
-                                <i class="fab fa-dribbble"></i>
+                                <i class="fab fa-instagram"></i>
                             </a>
-                        </span>
-                    </nav>
+                            </span>
+                            <span>
+                                <a href="#">
+                                    <i class="fab fa-dribbble"></i>
+                                </a>
+                            </span>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container-fluid header  p-0">
-        <div class="container h-100 p-0">
-            <nav class="navbar navbar-expand-lg h-100 p-0">
-                <a class="navbar-brand h-100 m-0 d-flex align-items-center" href="#">
-                    Health
+        <div class="container-fluid header  p-0">
+            <div class="container h-100 p-0">
+                <nav class="navbar navbar-expand-lg h-100 p-0">
+                    <a class="navbar-brand h-100 m-0 d-flex align-items-center" href="#">
+                        Health
+                        <span>
+                            coach
+                            <i class="fas fa-leaf"></i>
+                        </span>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                
+                    <div class="collapse navbar-collapse h-100 d-flex justify-content-end" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav m-0 h-100">
+                        <li class="nav-item active">
+                        <a class="nav-link p-0 h-100" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link p-0 h-100" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link p-0 h-100" href="#">Coach</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link p-0 h-100" href="#">Picing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link p-0 h-100" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link p-0 h-100" href="#">Stories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link p-0 h-100" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link p-0 h-100" href="#">Contact</a>
+                        </li>
+                    </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <section class="slide-section">
+        <div class="slideshow-container">
+            <div class="buttons">
+                <span class="button" onclick="currentSlide(0)"></span> 
+                <span class="button" onclick="currentSlide(1)"></span> 
+                <span class="button" onclick="currentSlide(2)"></span> 
+            </div>
+            <div class="slide" style="background-image: url('/images/image-1.jpg');">
+                <div class="caption caption-position--left">
+                    <h5>Welcome to health coach</h5>
+                    <h2>Get in shape faster, live your happy life</h2>
                     <span>
-                        coach
-                        <i class="fas fa-leaf"></i>
+                        <a href="">Learn more</a>
+                        <a href="">Contact us</a>
                     </span>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              
-                <div class="collapse navbar-collapse h-100 d-flex justify-content-end" id="navbarTogglerDemo02">
-                  <ul class="navbar-nav m-0 h-100">
-                    <li class="nav-item active">
-                      <a class="nav-link p-0 h-100" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link p-0 h-100" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-0 h-100" href="#">Coach</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-0 h-100" href="#">Picing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-0 h-100" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-0 h-100" href="#">Stories</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-0 h-100" href="#">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link p-0 h-100" href="#">Contact</a>
-                    </li>
-                  </ul>
                 </div>
-              </nav>
-        </div>
-    </div>
-    <div class="slideshow-container">
-        <div class="buttons">
-            <span class="button" onclick="currentSlide(0)"></span> 
-            <span class="button" onclick="currentSlide(1)"></span> 
-            <span class="button" onclick="currentSlide(2)"></span> 
-        </div>
-        <div class="slide" style="background-image: url('/images/image-1.jpg');">
-            <div class="caption caption-position--left">
-                <h5>Welcome to health coach</h5>
-                <h2>Get in shape faster, live your happy life</h2>
-                <span>
-                    <a href="">Learn more</a>
-                    <a href="">Contact us</a>
-                </span>
             </div>
-        </div>
-        <div class="slide" style="background-image: url('/images/image-2.jpg');">
-            <div class="caption caption-position--right">
-                <h5>A Fresh approach to healthy life</h5>
-                <h2>Unlock your potential with good nutrition</h2>
-                <span>
-                    <a href="">Learn more</a>
-                    <a href="">Contact us</a>
+            <div class="slide" style="background-image: url('/images/image-2.jpg');">
+                <div class="caption caption-position--right">
+                    <h5>A Fresh approach to healthy life</h5>
+                    <h2>Unlock your potential with good nutrition</h2>
+                    <span>
+                        <a href="">Learn more</a>
+                        <a href="">Contact us</a>
+                        </span>
+                </div>
+            </div>
+            <div class="slide" style="background-image: url('/images/image-3.jpg');">
+                <img class="img" src="/images/image-3.jpg"">
+                <div class="caption caption-position--left">
+                    <h5>Welcome to health coach</h5>
+                    <h2>You can transform health through habit change</h2>
+                    <span>
+                        <a href="">Learn more</a>
+                        <a href="">Contact us</a>
                     </span>
+                </div>
             </div>
         </div>
-        <div class="slide" style="background-image: url('/images/image-3.jpg');">
-            <img class="img" src="/images/image-3.jpg"">
-            <div class="caption caption-position--left">
-                <h5>Welcome to health coach</h5>
-                <h2>You can transform health through habit change</h2>
-                <span>
-                    <a href="">Learn more</a>
-                    <a href="">Contact us</a>
-                </span>
+    </section>
+    <section class="frame-section">
+        <div class="container div d-flex justify-content-between">
+            <div class="card border-0 ">
+                <div class="card-img-top" style="background-image: url('/images/image-4.jpg');"></div>
+                <div class="card-body">
+                  <h5 class="card-title">Excersise Program</h5>
+                  <p class="card-text">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                  <a href="#" class="btn btn-primary">Read more</a>
+                </div>
+            </div>
+            <div class="card border-0">
+                <div class="card-img-top" style="background-image: url('/images/image-5.jpg');"></div>
+                <div class="card-body">
+                  <h5 class="card-title">Nutrition Plans</h5>
+                  <p class="card-text">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                  <a href="#" class="btn btn-primary">Read more</a>
+                </div>
+            </div>
+            <div class="card border-0">
+                <div class="card-img-top" style="background-image: url('/images/image-6.jpg');"></div>
+                <div class="card-body">
+                  <h5 class="card-title">Diet Program</h5>
+                  <p class="card-text">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                  <a href="#" class="btn btn-primary">Read more</a>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    <section class="article">
+        <div class="container">
+            <div class="card mb-3">
+                <div class="row no-gutters">
+                    <div class="col-md-5 image" style="background-image: url('/images/image-7.jpg'); background-position: center; background-size: cover;">
+                    </div>
+                    <div class="col-md-7 content">
+                        <h5 class="title-content">
+                            Welcome to healthcoach
+                        </h5>
+                        <h2 class="head-content">
+                            Hello! Health Care is a natural way of improving your health
+
+                        </h2>
+                        <p class="body-content">
+                            A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+                        </p>
+                        <p class="body-content">
+                            A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                        </p>
+                        <div class="author">
+                            <div class="img" style="background-image: url('/images/image-7.jpg'); background-position: center; background-size: cover;">
+                            </div>
+                            <div class="infor">
+                                <h5 class="name">Cythia Hunter</h5>
+                                <p class="description">Personal Dietitian</p>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="/scripts/main.js"></script>
 </body>
 </html>
