Add servises card

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid header  p-0">
+        <div class="header p-0">
             <div class="container h-100 p-0">
                 <nav class="navbar navbar-expand-lg h-100 p-0">
                     <a class="navbar-brand h-100 m-0 d-flex align-items-center" href="#">
@@ -200,6 +200,79 @@
                         </div>
                     </div>
                   </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="services-section">
+        <div class="row w-100 h-100 p-0 m-0">
+            <div class="col-3 service p-0 h-100">
+                <h2 class="title-service">Healthcare Services</h2>
+                <p class="content-service">A small river named Duden flows by their place and supplies</p>
+                <h5 class="quote-service">
+                    <a href="">See services</a>
+                </h5>
+            </div>
+            <div class="col-6 consultation p-0 h-100">
+                <h2 class="title-service">Free Consultation</h2>
+                <form class="form">
+                    <div class="row w-100 m-0">
+                        <div class="col-4">
+                            <input class="form-control border-0" style="background: transparent;" type="text" placeholder="First Name">
+                        </div>
+                        <div class="col-4">
+                            <input class="form-control border-0" style="background: transparent;" type="text" placeholder="Last Name">
+                        </div>
+                        <div class="col-4">
+                            <select class="select-option border-0" name="services col-4" style="background: transparent;">
+                                <option value="service 1">Service </option>
+                                <option value="service 2">Service 1</option>
+                                <option value="service 3">Service 2</option>
+                            </select>
+                        </div>
+                        <div class="col-4">
+                            <input class="form-control border-0" style="background: transparent;" type="text" placeholder="Date">
+                        </div>
+                        <div class="col-4">
+                            <input class="form-control border-0" style="background: transparent;" type="text" placeholder="Time">
+                        </div>
+                        <div class="col-4 summit">
+                            <button class="btn" type="submit">Appointment</button>
+                        </div>
+                    </div>  
+                </form> 
+            </div>
+            <div class="col-3 service p-0 h-100">
+                <h2 class="title-service">Find A Health Exper</h2>
+                <p class="content-service">A small river named Duden flows by their place and supplies</p>
+                <h5 class="quote-service">
+                    <a href="">Meet our health coach</a>
+                </h5>
+            </div>
+        </div>
+    </section>
+    <section class="orther-services w-100">
+        <div class="title-orther-services">
+            <h5 class="title-content">Orther services</h5>
+            <h2 class="head-content">How it works?</h2>
+        </div>
+        <div class="container p-0 d-block">
+            <div class="row p-0 m-0 w-100">
+                <div class="card col-3 border-0">
+                    <h5>Follow the program</h5>
+                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                </div>
+                <div class="card col-3 border-0 ">
+                    <h5>Work for result</h5>
+                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                </div>
+                <div class="card col-3 border-0">
+                    <h5>Eat healthy food</h5>
+                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                </div>
+                <div class="card col-3 border-0">
+                    <h5>Enjoy your life</h5>
+                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
                 </div>
             </div>
         </div>
