Add slide stories

--- a/index.html
+++ b/index.html
@@ -109,34 +109,34 @@
                 <span class="button" onclick="currentSlide(1)"></span> 
                 <span class="button" onclick="currentSlide(2)"></span> 
             </div>
-            <div class="slide" style="background-image: url('/images/image-1.jpg');">
-                <div class="caption caption-position--left">
+            <div class="slide slides" style="background-image: url('/images/image-1.jpg');">
+                <div id="caption" class="caption caption-position--left">
                     <h5>Welcome to health coach</h5>
                     <h2>Get in shape faster, live your happy life</h2>
                     <span>
-                        <a href="">Learn more</a>
-                        <a href="">Contact us</a>
+                        <a href="#">Learn more</a>
+                        <a href="#">Contact us</a>
                     </span>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('/images/image-2.jpg');">
+            <div class="slide slides" style="background-image: url('/images/image-2.jpg');">
                 <div class="caption caption-position--right">
                     <h5>A Fresh approach to healthy life</h5>
                     <h2>Unlock your potential with good nutrition</h2>
                     <span>
-                        <a href="">Learn more</a>
-                        <a href="">Contact us</a>
+                        <a href="#">Learn more</a>
+                        <a href="#">Contact us</a>
                         </span>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('/images/image-3.jpg');">
+            <div class="slide slides" style="background-image: url('/images/image-3.jpg');">
                 <img class="img" src="/images/image-3.jpg"">
                 <div class="caption caption-position--left">
                     <h5>Welcome to health coach</h5>
                     <h2>You can transform health through habit change</h2>
                     <span>
-                        <a href="">Learn more</a>
-                        <a href="">Contact us</a>
+                        <a href="#">Learn more</a>
+                        <a href="#">Contact us</a>
                     </span>
                 </div>
             </div>
@@ -171,7 +171,7 @@
         </div>
     </section>
     <section class="article">
-        <div class="container">
+        <div class="container containers">
             <div class="card mb-3">
                 <div class="row no-gutters">
                     <div class="col-md-5 image" style="background-image: url('/images/image-7.jpg'); background-position: center; background-size: cover;">
@@ -210,7 +210,7 @@
                 <h2 class="title-service">Healthcare Services</h2>
                 <p class="content-service">A small river named Duden flows by their place and supplies</p>
                 <h5 class="quote-service">
-                    <a href="">See services</a>
+                    <a href="#">See services</a>
                 </h5>
             </div>
             <div class="col-6 consultation p-0 h-100">
@@ -246,7 +246,7 @@
                 <h2 class="title-service">Find A Health Exper</h2>
                 <p class="content-service">A small river named Duden flows by their place and supplies</p>
                 <h5 class="quote-service">
-                    <a href="">Meet our health coach</a>
+                    <a href="#">Meet our health coach</a>
                 </h5>
             </div>
         </div>
@@ -256,7 +256,7 @@
             <h5 class="title-content">Orther services</h5>
             <h2 class="head-content">How it works?</h2>
         </div>
-        <div class="container p-0 d-block">
+        <div class="container p-0 d-block" style="margin-top: 10rem;">
             <div class="row p-0 m-0 w-100">
                 <div class="card col-3 border-0">
                     <h5>Follow the program</h5>
@@ -273,6 +273,119 @@
                 <div class="card col-3 border-0">
                     <h5>Enjoy your life</h5>
                     <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="story-section w-100">
+        <div class="title-orther-services">
+            <h5 class="title-content">Stories</h5>
+            <h2 class="head-content">Successfull Stories</h2>
+        </div>
+        <div class="items h-100">
+            <div class="container carousel-inner" style="height: 60rem;">
+                <div class="containers carousel-item slide active h-100">
+                    <div class="card mb-3 h-100" >
+                        <div class="row no-gutters h-100">
+                            <div class="col-md-5 image h-100" style="background-image: url('/images/image-7.jpg'); background-position: center; background-size: cover;">
+                            </div>
+                            <div class="col-md-7 content h-100" style="background-color: #FFF">
+                                <h5 class="title-content">
+                                    Welcome to healthcoach
+                                </h5>
+                                <h2 class="head-content">
+                                    Hello! Health Care is a natural way of improving your health
+        
+                                </h2>
+                                <p class="body-content">
+                                    A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+                                </p>
+                                <p class="body-content">
+                                    A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                                </p>
+                                <div class="author">
+                                    <div class="infor">
+                                        <h5 class="name">Joy Smith</h5>
+                                        <p class="description">Client/Manager</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="containers carousel-item slide" style="height: 60rem;">
+                    <div class="card mb-3 h-100">
+                        <div class="row no-gutters h-100">
+                            <div class="col-md-5 image h-100" style="background-image: url('/images/image-1.jpg'); background-position: center; background-size: cover;">
+                            </div>
+                            <div class="col-md-7 content h-100" style="background-color: #FFF;">
+                                <h5 class="title-content">
+                                    A FRESH APPROACH TO HEALTHY LIFE
+                                </h5>
+                                <h2 class="head-content">
+                                    Hello! Health Care is a natural way of improving your health
+        
+                                </h2>
+                                <p class="body-content">
+                                    A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+                                </p>
+                                <p class="body-content">
+                                    A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                                </p>
+                                <div class="author">
+                                    <div class="infor">
+                                        <h5 class="name">Rony Smith</h5>
+                                        <p class="description">Client/Manager</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="containers carousel-item slide" style="height: 60rem;">
+                    <div class="card mb-3 h-100">
+                        <div class="row no-gutters h-100">
+                            <div class="col-md-5 image h-100" style="background-image: url('/images/image-3.jpg'); background-position: center; background-size: cover;">
+                            </div>
+                            <div class="col-md-7 content h-100" style="background-color: #FFF;">
+                                <h5 class="title-content">
+                                    Welcome to healthcoach
+                                </h5>
+                                <h2 class="head-content">
+                                    You can transform health through habit change
+                                </h2>
+                                <p class="body-content">
+                                    A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+                                </p>
+                                <p class="body-content">
+                                    A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                                </p>
+                                <div class="author">
+                                    <div class="infor">
+                                        <h5 class="name">Jone Doe</h5>
+                                        <p class="description">Client</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <i class="fas fa-chevron-left" onclick="plusDivs(-1)"></i>
+            <i class="fas fa-chevron-right" onclick="plusDivs(1)"></i>
+            </a>
+        </div>
+    </section>
+    <section class="cosutation">
+        <div class="overlay"></div> 
+        <div class="container">
+            <div class="wrap w-100 h-100">
+                <div class="m-0 p-0 text">
+                    <h1>We Provide Free Health Care Consultation</h1>
+                    <p>Your Health is Our Top Priority with Comprehensive, Affordable Health.</p>
+                </div>
+                <div class="span">
+                    <button class="btn btn-secondary">Free cosutation</button>
                 </div>
             </div>
         </div>
