Add price & plans card

--- a/index.html
+++ b/index.html
@@ -390,6 +390,132 @@
             </div>
         </div>
     </section>
+    <section class="price-section">
+        <div class="title-orther-services">
+            <h5 class="title-content">Prices and plans</h5>
+            <h2 class="head-content">Choose Your Perfect Plans</h2>
+        </div>
+        <div class="container p-0">
+            <div class="row h-100 p-0 m-0">
+                <div class="col-3 price-card" style="max-width: 22% !important; box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);">
+                    <div class="title-card">Starter</div>
+                    <div class="content-card">A beautiful healthcare</div>
+                    <span class="price-number">
+                        49
+                        <span>$</span>
+                    </span>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        20 Workouts
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        Meal plans in mobile
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        One coaching
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        50% Group coaching
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        24/7 Customers support
+                    </div>
+                    <button class="btn">Get started</button>
+                </div>
+                <div class="col-3 price-card" style="max-width: 22% !important; box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);">
+                    <div class="title-card">Standard</div>
+                    <div class="content-card">A beautiful healthcare</div>
+                    <span class="price-number">
+                        79
+                        <span>$</span>
+                    </span>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        20 Workouts
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        Meal plans in mobile
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        One coaching
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        50% Group coaching
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        24/7 Customers support
+                    </div>
+                    <button class="btn">Get started</button>
+                </div>
+                <div class="col-3 price-card" style="max-width: 22% !important; box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);">
+                    <div class="title-card">Premium</div>
+                    <div class="content-card">A beautiful healthcare</div>
+                    <span class="price-number">
+                        109
+                        <span>$</span>
+                    </span>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        20 Workouts
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        Meal plans in mobile
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        One coaching
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        50% Group coaching
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        24/7 Customers support
+                    </div>
+                    <button class="btn">Get started</button>
+                </div>
+                <div class="col-3 price-card" style="max-width: 22% !important; box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);">
+                    <div class="title-card">Platinum</div>
+                    <div class="content-card">A beautiful healthcare</div>
+                    <span class="price-number">
+                        159
+                        <span>$</span>
+                    </span>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        20 Workouts
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        Meal plans in mobile
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        One coaching
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        50% Group coaching
+                    </div>
+                    <div class="entitlement">
+                        <i class="fas fa-check"></i>
+                        24/7 Customers support
+                    </div>
+                    <button class="btn">Get started</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="/scripts/main.js"></script>
 </body>
 </html>
