--- a/index.html
+++ b/index.html
@@ -516,6 +516,59 @@
             </div>
         </div>
     </section>
+    <section class="news-section">
+        <div class="box-news">
+            <h2 class="head-news">Lastest news from our blog</h2>
+            <h5 class="title-news">News and blogs</h5>
+        </div>
+        <div class="container h-100 p-0">
+            <div class="row p-0 m-0">
+                <div class="col-4 new" style="max-width: 31%;">
+                    <div class="new-img" style="background-image: url('/images/image-9.jpg');"></div>
+                    <div class="note">
+                        <a href="#">January 30, 2020</a>
+                        <a href="#">Admin</a>
+                        <a href="#">
+                            <i class="fas fa-comment"></i>
+                            3
+                        </a>
+                    </div>
+                    <div class="caption">
+                        <a href="#">Even the all-powerful Pointing has no control about the blind texts</a>
+                    </div>
+                </div>
+                <div class="col-4 new" style="max-width: 31%;">
+                    <div class="new-img" style="background-image: url('/images/image-10.jpg');">
+                    </div>
+                    <div class="note">
+                        <a href="#">January 30, 2020</a>
+                        <a href="#">Admin</a>
+                        <a href="#">
+                            <i class="fas fa-comment"></i>
+                            3
+                        </a>
+                    </div>
+                    <div class="caption">
+                        <a href="#">Even the all-powerful Pointing has no control about the blind texts</a>
+                    </div>
+                </div>
+                <div class="col-4 new" style="max-width: 31%;">
+                    <div class="new-img" style="background-image: url('/images/image-11.jpg');"></div>
+                    <div class="note">
+                        <a href="#">January 30, 2020</a>
+                        <a href="#">Admin</a>
+                        <a href="#">
+                            <i class="fas fa-comment"></i>
+                            3
+                        </a>
+                    </div>
+                    <div class="caption">
+                        <a href="#">Even the all-powerful Pointing has no control about the blind texts</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="/scripts/main.js"></script>
 </body>
 </html>
