--- a/index.html
+++ b/index.html
@@ -569,6 +569,79 @@
             </div>
         </div>
     </section>
+    <section class="footer">
+        <div class="container">
+            <div class="row w-100 h-100">
+                <div class="col-6 pl-5">
+                    <div class="footer-title">
+                        Health
+                        <span>care</span>
+                    </div>
+                    <div class="footer-content">
+                        A small river named Duden flows by their place and supplies it with the necessary regelialia.
+                    </div>
+                    <a href="#">read more</a>
+                </div>
+                <div class="col-6 p-0 row">
+                    <div class="footer-services col-3">
+                        <div class="services-title">
+                            Services
+                        </div>
+                        <a href="#">Balance Body</a>
+                        <a href="#">Physical Activity</a>
+                        <a href="#">Fitness Program</a>
+                        <a href="#">Healthy Food</a>
+                    </div>
+                    <div class="footer-services col-3">
+                        <div class="services-title">
+                            About
+                        </div>
+                        <a href="#">Staff</a>
+                        <a href="#">Team</a>
+                        <a href="#">Careers</a>
+                        <a href="#">Blog</a>
+                    </div>
+                    <div class="footer-services col-3">
+                        <div class="services-title">
+                            Resources
+                        </div>
+                        <a href="#">Security</a>
+                        <a href="#">Global</a>
+                        <a href="#">Charts</a>
+                        <a href="#">Privacy</a>
+                    </div>
+                    <div class="footer-services col-3">
+                        <div class="services-title">
+                            Social
+                        </div>
+                        <a href="#">Facebook</a>
+                        <a href="#">Twitter</a>
+                        <a href="#">instagram</a>
+                        <a href="#">Google</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-7">
+                    Copyright ©2020 All rights reserved | This template is made with
+                    <i class="fas fa-heart"></i>
+                    by
+                    <a href="#">Colorlib.com</a>
+                </div>
+                <div class="col-5">
+                    <a href="#">Terms</a>
+                    <a href="#">Privacy</a>
+                    <a href="#">Compliances</a>
+                </div>
+            </div>
+        </div>
+        <div class="input-group">
+            <input type="text" placeholder="Enter email address">
+            <button class="button">Subscribe</button>
+        </div>
+    </section>
     <script src="/scripts/main.js"></script>
 </body>
 </html>
