--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                     </span>
                 </div>
             </div>
-            <div class="slide slides" style="background-image: url('/healthcoach/images/image-2.jpg'); background-size: cover">
+            <div class="slide slides"
+                style="background-image: url('/healthcoach/images/image-2.jpg'); background-size: cover">
                 <div class="caption caption-position--right">
                     <h5>A Fresh approach to healthy life</h5>
                     <h2>Unlock your potential with good nutrition</h2>
@@ -135,7 +136,8 @@
                     </span>
                 </div>
             </div>
-            <div class="slide slides" style="background-image: url('/healthcoach/images/image-3.jpg'); background-size: cover">
+            <div class="slide slides"
+                style="background-image: url('/healthcoach/images/image-3.jpg'); background-size: cover">
                 <div class="caption caption-position--left">
                     <h5>Welcome to health coach</h5>
                     <h2>You can transform health through habit change</h2>
@@ -207,8 +209,8 @@
                         </p>
                         <div class="author">
                             <div class="img"
-                                style="background-image: url('/healthcoachimages/image-7.jpg'); background-position: center; background-size: cover;">
-                            </div>
+                                style="background-image: url('/healthcoachimages/image-8.jpg'); background-position: center; background-size: cover;">
+                            </div>git s
                             <div class="infor">
                                 <h5 class="name">Cythia Hunter</h5>
                                 <p class="description">Personal Dietitian</p>
